# DaisySP

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  _karplus_string_8h.html  _karplus_string_8h_source.html  _poly_pluck_8h_source.html  adenv_8h_source.html  adsr_8h_source.html  allpass_8h.html  allpass_8h_source.html  analogbassdrum_8h.html  analogbassdrum_8h_source.html  analogsnaredrum_8h.html  analogsnaredrum_8h_source.html  annotated.html  atone_8h_source.html  autowah_8h_source.html  balance_8h_source.html  biquad_8h_source.html  bitcrush_8h_source.html  blosc_8h_source.html  chorus_8h.html  chorus_8h_source.html  class_soap-members.html  class_soap.html  classdaisysp_1_1_a_tone-members.html  classdaisysp_1_1_a_tone.html  classdaisysp_1_1_ad_env-members.html  classdaisysp_1_1_ad_env.html  classdaisysp_1_1_adsr-members.html  classdaisysp_1_1_adsr.html  classdaisysp_1_1_allpass-members.html  classdaisysp_1_1_allpass.html  (+319 more)
.github/: pull_request_template.md
.github/workflows/: README.md  build.yml  build_docs.yml  deploy_docs.yml  style.yml
Source/: daisysp.h
Source/Control/: adenv.cpp  adenv.h  adsr.cpp  adsr.h  phasor.cpp  phasor.h
Source/Drums/: analogbassdrum.cpp  analogbassdrum.h  analogsnaredrum.h  hihat.cpp  hihat.h  synthbassdrum.h  synthsnaredrum.h
Source/Dynamics/: compressor.h  crossfade.h  limiter.h
Source/Effects/: Freeverb.cpp  Freeverb.h  FvAllpass.h  FvComb.h  autowah.h  bitcrush.h  chorus.cpp  chorus.h  decimator.cpp  decimator.h  flanger.h  fold.cpp  fold.h  overdrive.h  phaser.cpp  phaser.h  pitchshifter.h  reverbsc.cpp  reverbsc.h  sampleratereducer.cpp  sampleratereducer.h  tremolo.cpp  tremolo.h  wavefolder.cpp  wavefolder.h
Source/Filters/: biquad.cpp  biquad.h  comb.h  fir.h  ladder.cpp  ladder.h  mode.h  nlfilt.cpp  onepole.h  soap.cpp  soap.h  svf.cpp  svf.h  tone.cpp  tone.h
Source/Noise/: clockednoise.h  dust.h  fractal_noise.h  grainlet.h  particle.h  whitenoise.h
Source/PhysicalModeling/: KarplusString.cpp  KarplusString.h  drip.h  modalvoice.cpp  modalvoice.h  pluck.cpp  resonator.cpp  resonator.h  string.cpp  string.h  stringvoice.h
Source/Sampling/: granularplayer.cpp  granularplayer.h
Source/Synthesis/: fm2.h  formantosc.h  harmonic_osc.h  oscillator.cpp  oscillator.h  oscillatorbank.h  variablesawosc.h  variableshapeosc.h  vosim.cpp  vosim.h  wavetable_osc.h  zoscillator.h
Source/Utility/: buffer.h  dcblock.cpp  dcblock.h  delayline.h  dsp.h  looper.h  maytrig.h  metro.cpp  metro.h  port.cpp  samplehold.h  smooth_random.h  wavetables.cpp  wavetables.h
ci/: travis_setup_gcc_arm.sh
cmake/toolchains/: stm32h750xx.cmake
examples/adenv/: Makefile  README.md  ex_adenv.cpp
examples/adsr/: Makefile  README.md  ex_adsr.cpp
examples/allpass/: Makefile  README.md  ex_allpass.cpp
examples/atone/: Makefile  README.md  ex_atone.cpp
examples/autowah/: Makefile  README.md  ex_autowah.cpp
examples/bal/: Makefile  ex_bal.cpp
examples/balance/: Makefile  README.md  ex_balance.cpp
examples/biquad/: Makefile  README.md  ex_biquad.cpp
examples/bitcrush/: Makefile  README.md  ex_bitcrush.cpp
examples/blosc/: Makefile  README.md  ex_blosc.cpp
examples/blsaw/: Makefile  ex_blsaw.cpp
examples/blsquare/: Makefile  ex_blsquare.cpp
examples/bltriangle/: Makefile  ex_bltriangle.cpp
examples/bypass/: Makefile  README.md  ex_bypass.cpp
examples/comb/: Makefile  README.md  ex_comb.cpp
examples/compressor/: Makefile  README.md  ex_compressor.cpp
examples/crossfade/: Makefile  README.md  ex_crossfade.cpp
examples/dcblock/: Makefile  README.md  ex_dcblock.cpp
examples/decimator/: Makefile  README.md  ex_decimator.cpp
examples/delayline/: Makefile  README.md  ex_delayline.cpp
examples/drip/: Makefile  README.md  ex_drip.cpp
examples/faustnoise/: Makefile  README.md  ex_faust.cpp
examples/fm2/: Makefile  README.md  ex_fm2.cpp
examples/formantosc/: Makefile  README.md  ex_formantosc.cpp
examples/jitter/: Makefile  README.md  ex_jitter.cpp
examples/line/: Makefile  README.md  ex_line.cpp
examples/maytrig/: Makefile  README.md  ex_maytrig.cpp
examples/metro/: Makefile  README.md  ex_metro.cpp
examples/moogladder/: Makefile  README.md  ex_moogladder.cpp
examples/nlfilt/: Makefile  README.md  ex_nlfilt.cpp
examples/oscillator/: Makefile  README.md  ex_oscillator.cpp
examples/phasor/: Makefile  README.md  ex_phasor.cpp
examples/pitchshifter/: Makefile  README.md  ex_pitchshifter.cpp
examples/pluck/: Makefile  README.md  ex_pluck.cpp
examples/port/: Makefile  README.md  ex_port.cpp
examples/reverbsc/: Makefile  README.md  ex_reverbsc.cpp
examples/samplehold/: Makefile  README.md  ex_samplehold.cpp
examples/svf/: Makefile  README.md  ex_svf.cpp
examples/template/: Makefile  (+2 more)
misc/: lut_writer.py
modules/: PolyPluck.h  adenv.cpp  adenv.h  adsr.cpp  adsr.h  allpass.cpp  allpass.h  analogbassdrum.cpp  analogbassdrum.h  analogsnaredrum.cpp  analogsnaredrum.h  atone.cpp  atone.h  autowah.cpp  autowah.h  bal.cpp  bal.h  balance.cpp  balance.h  biquad.cpp  biquad.h  bitcrush.cpp  bitcrush.h  blosc.cpp  blosc.h  blsaw.cpp  blsaw.h  blsquare.cpp  blsquare.h  bltriangle.cpp  bltriangle.h  chorus.cpp  chorus.h  clockednoise.cpp  clockednoise.h  comb.cpp  comb.h  compressor.cpp  compressor.h  crossfade.cpp  (+108 more)
resources/: Style-Guide.md  preamble.md  template.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+54 more)
util/: curve_tester.py  fix_docs.py  fix_style.sh  rebuild_docs.sh
vs/: daisysp-Debug.vgdbsettings  daisysp-Release.vgdbsettings  daisysp.vcxproj  daisysp.vcxproj.filters  stm32.props  stm32.xml
(+121 files in other folders)
